plugins {
    id 'java'
    id 'idea'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(18)
    }
}

// Enable preview language features
tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}
